# GPS-SLAM

./: .gitignore  CMakeLists.txt  README.md  build_third_libs.sh  download_replica.sh  remote_viewer.cpp  slam_trainer.cpp
InfiniTAM/: CMakeLists.txt
InfiniTAM/ITMLib/: CMakeLists.txt  ITMLibDefines.h
InfiniTAM/ITMLib/Core/: ITMBasicEngine.h  ITMBasicEngine.tpp  ITMDenseMapper.tpp  ITMTrackingController.h
InfiniTAM/ITMLib/Engines/Meshing/CPU/: ITMMeshingEngine_CPU.h  ITMMeshingEngine_CPU.tpp  ITMMultiMeshingEngine_CPU.tpp
InfiniTAM/ITMLib/Engines/Meshing/CUDA/: ITMMeshingEngine_CUDA.tcu
InfiniTAM/ITMLib/Engines/Meshing/Shared/: ITMMeshingEngine_Shared.h
InfiniTAM/ITMLib/Engines/Reconstruction/CPU/: ITMSceneReconstructionEngine_CPU.tpp
InfiniTAM/ITMLib/Engines/Reconstruction/CUDA/: ITMSceneReconstructionEngine_CUDA.tcu  ITMSurfelSceneReconstructionEngine_CUDA.tcu
InfiniTAM/ITMLib/Engines/Reconstruction/Shared/: ITMSceneReconstructionEngine_Shared.h
InfiniTAM/ITMLib/Engines/ViewBuilding/CUDA/: ITMViewBuilder_CUDA.cu
InfiniTAM/ITMLib/Engines/ViewBuilding/Shared/: ITMViewBuilder_Shared.h
InfiniTAM/ITMLib/Engines/Visualisation/CPU/: ITMVisualisationEngine_CPU.tpp
InfiniTAM/ITMLib/Engines/Visualisation/CUDA/: ITMVisualisationEngine_CUDA.tcu  ITMVisualisationHelpers_CUDA.h
InfiniTAM/ITMLib/Engines/Visualisation/Shared/: ITMVisualisationEngine_Shared.h
InfiniTAM/ITMLib/Objects/Camera/: ITMCalibIO.cpp  ITMIntrinsics.h  ITMRGBDCalib.h
InfiniTAM/ITMLib/Objects/Meshing/: ITMMesh.h
InfiniTAM/ITMLib/Objects/Scene/: ITMLocalVBA.h  ITMRepresentationAccess.h  ITMScene.h  ITMVoxelTypes.h
InfiniTAM/ITMLib/Objects/Tracking/: ITMTrackingState.h
InfiniTAM/ITMLib/Trackers/Interface/: ITMExtendedTracker.cpp  ITMTracker.h
InfiniTAM/ITMLib/Utils/: ITMSceneParams.h  ITMSurfelSceneParams.h
InfiniTAM/InputSource/: ImageSourceEngine.h
InfiniTAM/ORUtils/: Image.h  Vector.h
InfiniTAM/cmake/: CUDACheckCompute.cmake  Flags.cmake  SetCUDAAppTarget.cmake  SetCUDALibTarget.cmake  UseCUDA.cmake  UseGLUT.cmake  UseOpenGL.cmake  UseOpenMP.cmake
configs/release/gps_slam/: activity_room.yaml  office0.yaml  office1.yaml  office2.yaml  signboard.yaml
configs/release/replica/: office0.yaml  office1.yaml  office2.yaml  office3.yaml  office4.yaml  room0.yaml  room1.yaml  room2.yaml
configs/viewer/: office0.yaml
gsplat/: gsplat_wapper.cpp  gsplat_wapper.hpp
gsplat/rasterizer/: bindings.h  compute_sh_bwd.cu  ext.cpp  fully_fused_projection_bwd.cu  isect_tiles.cu  isect_tiles_no_depth.cu  rasterize_to_pixels_bwd.cu  rasterize_to_pixels_bwd_ges.cu  rasterize_to_pixels_bwd_ges_new_parallel.cu  rasterize_to_pixels_fwd.cu  rasterize_to_pixels_fwd_ges.cu  simple_knn.cu  simple_knn.h  ssim.cu  ssim.h
include/: cv_utils.h  dataset_reader.h  file_utils.h  kdtree_tensor.h  optim_scheduler.hpp  pipeline.h  raw_gs_model.h  raw_gs_param.h  tensor_math.h
run/: eval.py  read_results.py  run.sh  train.py
scripts/: ate_general.py  geo_general.py  metric.py  metric_general.py  replica_preprocess.py
scripts/lpipsPyTorch/: __init__.py
slam/: InfiniTAM_tools.cpp  InfiniTAM_tools.h  slam_gs_model.cpp  slam_gs_model.h  slam_pipeline.cpp  slam_pipeline.h
slam/TsdfFusion/: CLIEngine.cpp  CLIEngine.h  UIEngine.cpp  UIEngine.h
src/: cv_utils.cpp  dataset_reader.cpp  file_utils.cpp  kdtree_tensor.cpp  pipeline.cpp  raw_gs_model.cpp  raw_gs_param.cpp  tensor_math.cpp
